@@ -1,5 +1,10 @@
 2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/data/time/FixedMillisecond.java
+    (time): Changed from Date to long.
+
+2008-06-10  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/data/time/DateRange.java
     (lowerDate): Changed from Date to long,
     (upperDate): Likewise,
